samples/_failures_safe/1761298183_2299b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1790d376.c: In function ‘main’:
./samples/SAFE/__tmp_1790d376.c:169:12: error: missing terminating " character
  169 |     printf("Enter arithmetic expression:
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1790d376.c:169:5: error: expected expression at end of input
  169 |     printf("Enter arithmetic expression:
      |     ^~~~~~
./samples/SAFE/__tmp_1790d376.c:169:5: error: expected declaration or statement at end of input
